# UnityRustInteractTest

./: .gitignore  Build.ps1  ReadMe.md
Assets/: Test.cs  UniversalRenderPipelineGlobalSettings.asset
Assets/Editor/: SetUp.cs
Assets/Minesweeper/: Block.cs  Console.cs  Minesweeper.cs
Assets/RustCode/: RustExtension.cs  RustLib.g.cs
Assets/RustLib/: RustExtension.cs  RustLib.g.cs
Assets/RustLib/Editor/: SetUp.cs
Assets/Scenes/: SampleScene.unity
ProjectSettings/: ProjectSettings.asset  ProjectVersion.txt
RustWrapper/: RustWrapper.sln
RustWrapper/ConsoleApp2/: ConsoleApp2.csproj  Program.cs
RustWrapper/RustWrapper/: Launcher.cs  RustExtension.cs  RustWrapper.csproj
rust-unity/: Cargo.toml  build.rs
rust-unity/build-tool/: Cargo.toml
rust-unity/build-tool/src/: main.rs
rust-unity/src/: core.rs  lib.rs  minecraft.rs  minesweeper.rs  ~main.rs
