[package]
name = "rust-unity"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_unity"
crate-type = ["cdylib"]

[dependencies]
time = { version = "0.3.36", features = ["serde", "serde-human-readable"] }
rand = "0.9.0-alpha.2"
lazy_static = "1.5.0"
crossterm = "0.28.1"

[workspace]
members = ["build-tool"]